Revert "fix: fix white space bug on mobile"
This reverts commit d7588dd525d8fac7f1b6acf356a3bc26116c3a9a.

--- a/src/global.css
+++ b/src/global.css
@@ -8,10 +8,6 @@
   padding: 0;
 }
 
-html {
-  min-height: 100vh;
-}
-
 @font-face {
   font-family: Unibody;
   src: url('/fonts/Unibody.otf') format('opentype');
